<resources>
    <string name="app_name">Github User</string>

    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Github User</string>
    <string name="followers">%1$s Followers</string>
    <string name="following">%d Following</string>
    <string name="repository">%d Repository</string>
    <string name="avatar">Avatar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="error_message">Error Message</string>
    <string name="repository_name">Repository Name</string>
    <string name="visibility">Visibility</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="by_rizfan">By Rizfan</string>
    <string name="favorite_kosong">Favorite Kosong!</string>


    <string-array name="tab_titles">
        <item>Followers</item>
        <item>Following</item>
        <item>Repository</item>
    </string-array>
</resources>